--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
+
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -21,12 +23,13 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.3.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/aos": "^3.0.7",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
   },
-  "overrides": {
-  }
+  "overrides": {}
 }
