--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "next start",
     "lint": "next lint",
     "analyze": "cross-env ANALYZE=true next build"
-
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -21,6 +20,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
