--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "19.0.3",
     "aos": "3.0.0-beta.6",
     "framer-motion": "^12.16.0",
+    "intersection-observer": "^0.12.2",
     "next": "15.1.6",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
