--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "aos": "3.0.0-beta.6",
+    "datalayer": "^0.2.1",
     "framer-motion": "^12.16.0",
     "intersection-observer": "^0.12.2",
     "next": "15.1.6",
